--- a/example/transform/self_instruct_pdf_source.ipynb
+++ b/example/transform/self_instruct_pdf_source.ipynb
@@ -56,7 +56,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/joseortiz/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/opt/conda/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     },
@@ -75,11 +75,11 @@
     "import os\n",
     "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
-    "from uniflow.transform.client import Client\n",
-    "from uniflow.transform.config import TransformOpenAIConfig\n",
-    "from uniflow.model.config import OpenAIModelConfig\n",
+    "from uniflow.flow.client import TransformClient\n",
+    "from uniflow.flow.config import TransformOpenAIConfig\n",
+    "from uniflow.op.transform.model_config import OpenAIModelConfig\n",
     "from langchain.document_loaders import PyPDFLoader\n",
-    "from uniflow.schema import Context, GuidedPrompt\n",
+    "from uniflow.op.prompt_schema import Context, GuidedPrompt\n",
     "from dotenv import load_dotenv\n",
     "\n",
     "load_dotenv()"
@@ -181,7 +181,7 @@
     "config = TransformOpenAIConfig(\n",
     "    model_config=OpenAIModelConfig(response_format={\"type\": \"json_object\"}),\n",
     ")\n",
-    "client = Client(config)"
+    "client = TransformClient(config)"
    ]
   },
   {
@@ -193,7 +193,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:12<00:00, 12.96s/it]\n"
+      "  0%|          | 0/1 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:10<00:00, 10.97s/it]\n"
      ]
     }
    ],
@@ -211,9 +218,9 @@
       "text/plain": [
        "[{'output': [{'response': [{'context': '11/6/23, 11:40 AM Maker\\'s Schedule, Manager\\'s Schedule\\nhttps://www.paulgraham.com/makersschedule.html 1/3\\n\"...the mere consciousness of an engagement will sometimes\\nworry a whole da y.\"\\nCharles Dick ens\\nJuly 2009\\nOne reason progr ammers dislik e meetings so much is that they\\'re\\non a different t ype of schedule from other people. Meetings cost\\nthem more.\\nThere are two t ypes of schedule, which I\\'ll call the manager\\'s\\nschedule and the mak er\\'s schedule. The manager\\'s schedule is for\\nbosses. It\\'s embodied in the tr aditional appointment book, with\\neach da y cut into one hour interv als. Y ou can block off sev eral\\nhours for a single task if y ou need to , but b y default y ou change\\nwhat y ou\\'re doing ev ery hour .\\nWhen y ou use time that w ay, it\\'s merely a pr actical problem to\\nmeet with someone. Find an open slot in y our schedule, book\\nthem, and y ou\\'re done.\\nMost powerful people are on the manager\\'s schedule. It\\'s the\\nschedule of command. But there\\'s another w ay of using time\\nthat\\'s common among people who mak e things, lik e progr ammers\\nand writers. They gener ally prefer to use time in units of half a\\nday at least. Y ou can\\'t write or progr am well in units of an hour .\\nThat\\'s barely enough time to get started.\\nWhen y ou\\'re oper ating on the mak er\\'s schedule, meetings are a\\ndisaster . A single meeting can blow a whole afternoon, b y\\nbreaking it into two pieces each too small to do an ything hard in.\\nPlus y ou ha ve to remember to go to the meeting. That\\'s no\\nproblem for someone on the manager\\'s schedule. There\\'s alw ays\\nsomething coming on the next hour; the only question is what.\\nBut when someone on the mak er\\'s schedule has a meeting, they\\nhave to think about it.\\nFor someone on the mak er\\'s schedule, ha ving a meeting is lik e\\nthrowing an ex ception. It doesn\\'t merely cause y ou to switch\\nfrom one task to another; it changes the mode in which y ou\\nwork.\\nI find one meeting can sometimes affect a whole da y. A meeting\\ncommonly blows at least half a da y, by breaking up a morning or\\nafternoon. But in addition there\\'s sometimes a cascading effect. If\\nI know the afternoon is going to be brok en up , I\\'m slightly less\\nlikely to start something ambitious in the morning. I know this\\nmay sound o versensitiv e, but if y ou\\'re a mak er, think of y our own\\ncase. Don\\'t y our spirits rise at the thought of ha ving an entire da y\\nfree to work, with no appointments at all? W ell, that means y our\\nspirits are correspondingly depressed when y ou don\\'t. And\\nambitious projects are b y definition close to the limits of y our',\n",
        "      'question': \"What is the difference between the manager's schedule and the maker's schedule?\",\n",
-       "      'answer': \"The manager's schedule is divided into one-hour intervals and is suitable for bosses. In contrast, the maker's schedule is preferred by people who make things, like programmers and writers, and they generally prefer to use time in units of half a day at least, as they can't work well in units of an hour.\"}],\n",
+       "      'answer': \"The manager's schedule is divided into one-hour intervals with the ability to block off several hours for a single task, while the maker's schedule prefers to use time in units of half a day at least, as it is common among people who make things, like programmers and writers.\"}],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x15c200af0>}]"
+       "  'root': <uniflow.node.node.Node at 0x7f9d6af65a80>}]"
       ]
      },
      "execution_count": 10,
@@ -261,7 +268,7 @@
        "      <th>0</th>\n",
        "      <td>11/6/23, 11:40 AM Maker's Schedule, Manager's Schedule\\nhttps://www.paulgraham.com/makersschedule.html 1/3\\n\"...the mere consciousness of an engagement will sometimes\\nworry a whole da y.\"\\nCharles Dick ens\\nJuly 2009\\nOne reason progr ammers dislik e meetings so much is that they're\\non a different t ype of schedule from other people. Meetings cost\\nthem more.\\nThere are two t ypes of schedule, which I'll call the manager's\\nschedule and the mak er's schedule. The manager's schedule is for\\nbosses. It's embodied in the tr aditional appointment book, with\\neach da y cut into one hour interv als. Y ou can block off sev eral\\nhours for a single task if y ou need to , but b y default y ou change\\nwhat y ou're doing ev ery hour .\\nWhen y ou use time that w ay, it's merely a pr actical problem to\\nmeet with someone. Find an open slot in y our schedule, book\\nthem, and y ou're done.\\nMost powerful people are on the manager's schedule. It's the\\nschedule of command. But there's another w ay of using time\\nthat's common among people who mak e things, lik e progr ammers\\nand writers. They gener ally prefer to use time in units of half a\\nday at least. Y ou can't write or progr am well in units of an hour .\\nThat's barely enough time to get started.\\nWhen y ou're oper ating on the mak er's schedule, meetings are a\\ndisaster . A single meeting can blow a whole afternoon, b y\\nbreaking it into two pieces each too small to do an ything hard in.\\nPlus y ou ha ve to remember to go to the meeting. That's no\\nproblem for someone on the manager's schedule. There's alw ays\\nsomething coming on the next hour; the only question is what.\\nBut when someone on the mak er's schedule has a meeting, they\\nhave to think about it.\\nFor someone on the mak er's schedule, ha ving a meeting is lik e\\nthrowing an ex ception. It doesn't merely cause y ou to switch\\nfrom one task to another; it changes the mode in which y ou\\nwork.\\nI find one meeting can sometimes affect a whole da y. A meeting\\ncommonly blows at least half a da y, by breaking up a morning or\\nafternoon. But in addition there's sometimes a cascading effect. If\\nI know the afternoon is going to be brok en up , I'm slightly less\\nlikely to start something ambitious in the morning. I know this\\nmay sound o versensitiv e, but if y ou're a mak er, think of y our own\\ncase. Don't y our spirits rise at the thought of ha ving an entire da y\\nfree to work, with no appointments at all? W ell, that means y our\\nspirits are correspondingly depressed when y ou don't. And\\nambitious projects are b y definition close to the limits of y our</td>\n",
        "      <td>What is the difference between the manager's schedule and the maker's schedule?</td>\n",
-       "      <td>The manager's schedule is divided into one-hour intervals and is suitable for bosses. In contrast, the maker's schedule is preferred by people who make things, like programmers and writers, and they generally prefer to use time in units of half a day at least, as they can't work well in units of an hour.</td>\n",
+       "      <td>The manager's schedule is divided into one-hour intervals with the ability to block off several hours for a single task, while the maker's schedule prefers to use time in units of half a day at least, as it is common among people who make things, like programmers and writers.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -271,8 +278,8 @@
        "                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       context  \\\n",
        "0  11/6/23, 11:40 AM Maker's Schedule, Manager's Schedule\\nhttps://www.paulgraham.com/makersschedule.html 1/3\\n\"...the mere consciousness of an engagement will sometimes\\nworry a whole da y.\"\\nCharles Dick ens\\nJuly 2009\\nOne reason progr ammers dislik e meetings so much is that they're\\non a different t ype of schedule from other people. Meetings cost\\nthem more.\\nThere are two t ypes of schedule, which I'll call the manager's\\nschedule and the mak er's schedule. The manager's schedule is for\\nbosses. It's embodied in the tr aditional appointment book, with\\neach da y cut into one hour interv als. Y ou can block off sev eral\\nhours for a single task if y ou need to , but b y default y ou change\\nwhat y ou're doing ev ery hour .\\nWhen y ou use time that w ay, it's merely a pr actical problem to\\nmeet with someone. Find an open slot in y our schedule, book\\nthem, and y ou're done.\\nMost powerful people are on the manager's schedule. It's the\\nschedule of command. But there's another w ay of using time\\nthat's common among people who mak e things, lik e progr ammers\\nand writers. They gener ally prefer to use time in units of half a\\nday at least. Y ou can't write or progr am well in units of an hour .\\nThat's barely enough time to get started.\\nWhen y ou're oper ating on the mak er's schedule, meetings are a\\ndisaster . A single meeting can blow a whole afternoon, b y\\nbreaking it into two pieces each too small to do an ything hard in.\\nPlus y ou ha ve to remember to go to the meeting. That's no\\nproblem for someone on the manager's schedule. There's alw ays\\nsomething coming on the next hour; the only question is what.\\nBut when someone on the mak er's schedule has a meeting, they\\nhave to think about it.\\nFor someone on the mak er's schedule, ha ving a meeting is lik e\\nthrowing an ex ception. It doesn't merely cause y ou to switch\\nfrom one task to another; it changes the mode in which y ou\\nwork.\\nI find one meeting can sometimes affect a whole da y. A meeting\\ncommonly blows at least half a da y, by breaking up a morning or\\nafternoon. But in addition there's sometimes a cascading effect. If\\nI know the afternoon is going to be brok en up , I'm slightly less\\nlikely to start something ambitious in the morning. I know this\\nmay sound o versensitiv e, but if y ou're a mak er, think of y our own\\ncase. Don't y our spirits rise at the thought of ha ving an entire da y\\nfree to work, with no appointments at all? W ell, that means y our\\nspirits are correspondingly depressed when y ou don't. And\\nambitious projects are b y definition close to the limits of y our   \n",
        "\n",
-       "                                                                          question                                                                                                                                                                                                                                                                                                             answer  \n",
-       "0  What is the difference between the manager's schedule and the maker's schedule?  The manager's schedule is divided into one-hour intervals and is suitable for bosses. In contrast, the maker's schedule is preferred by people who make things, like programmers and writers, and they generally prefer to use time in units of half a day at least, as they can't work well in units of an hour.  "
+       "                                                                          question                                                                                                                                                                                                                                                                                answer  \n",
+       "0  What is the difference between the manager's schedule and the maker's schedule?  The manager's schedule is divided into one-hour intervals with the ability to block off several hours for a single task, while the maker's schedule prefers to use time in units of half a day at least, as it is common among people who make things, like programmers and writers.  "
       ]
      },
      "execution_count": 11,
