--- a/example/transform/self_instruct_html_source.ipynb
+++ b/example/transform/self_instruct_html_source.ipynb
@@ -72,7 +72,7 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "from uniflow.flow.client import ExtractClient,TransformClient\n",
+    "from uniflow.flow.client import TransformClient\n",
     "from uniflow.flow.config import TransformOpenAIConfig\n",
     "from langchain.document_loaders import UnstructuredHTMLLoader\n",
     "from dotenv import load_dotenv\n",
@@ -209,7 +209,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:08<00:00,  2.69s/it]\n"
+      "100%|██████████| 3/3 [00:05<00:00,  1.96s/it]\n"
      ]
     }
    ],
@@ -225,15 +225,15 @@
     {
      "data": {
       "text/plain": [
-       "[{'output': [{'response': ['question: How much information do the events have in terms of bits?\\nanswer: The events have 0 bits, 2 bits, 5.7 bits, and 225.6 bits of information respectively.'],\n",
+       "[{'output': [{'response': ['question: How much information do the events have, according to the next sections?\\nanswer: The events have \\\\(0\\\\textrm{ bits}\\\\), \\\\(2\\\\textrm{ bits}\\\\), \\\\(~5.7\\\\textrm{ bits}\\\\), and \\\\(~225.6\\\\textrm{ bits}\\\\) of information respectively.'],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x7f2a1b5dd2a0>},\n",
-       " {'output': [{'response': ['question: How does the amount of information relate to the degree of surprise or abstract possibility of an event?\\nanswer: The amount of information represents the degree of surprise or the abstract possibility of the event. More unusual events require more information, while common events may not need much information.'],\n",
+       "  'root': <uniflow.node.node.Node at 0x7fc4d2551180>},\n",
+       " {'output': [{'response': ['question: What does information represent in the context of describing an unusual event?\\nanswer: The degree of surprise or the abstract possibility of the event.'],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x7f2a1b5dcfa0>},\n",
-       " {'output': [{'response': ['question: Who is credited with establishing the theory of information in 1948?\\nanswer: Claude E. Shannon.'],\n",
+       "  'root': <uniflow.node.node.Node at 0x7fc4d2550e50>},\n",
+       " {'output': [{'response': ['question: Who published A Mathematical Theory of Communication in 1948?\\nanswer: Claude E. Shannon.'],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x7f2a1b5dd3f0>}]"
+       "  'root': <uniflow.node.node.Node at 0x7fc4d2552b90>}]"
       ]
      },
      "execution_count": 10,
@@ -285,17 +285,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>How much information do the events have in terms of bits?</td>\n",
-       "      <td>The events have 0 bits, 2 bits, 5.7 bits, and 225.6 bits of information respectively.</td>\n",
+       "      <td>How much information do the events have, according to the next sections?</td>\n",
+       "      <td>The events have \\(0\\textrm{ bits}\\), \\(2\\textrm{ bits}\\), \\(~5.7\\textrm{ bits}\\), and \\(~225.6\\textrm{ bits}\\) of information respectively.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>How does the amount of information relate to the degree of surprise or abstract possibility of an event?</td>\n",
-       "      <td>The amount of information represents the degree of surprise or the abstract possibility of the event. More unusual events require more information, while common events may not need much information.</td>\n",
+       "      <td>What does information represent in the context of describing an unusual event?</td>\n",
+       "      <td>The degree of surprise or the abstract possibility of the event.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Who is credited with establishing the theory of information in 1948?</td>\n",
+       "      <td>Who published A Mathematical Theory of Communication in 1948?</td>\n",
        "      <td>Claude E. Shannon.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -303,10 +303,10 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                                                                    question                                                                                                                                                                                                   answer\n",
-       "0                                                  How much information do the events have in terms of bits?                                                                                                                    The events have 0 bits, 2 bits, 5.7 bits, and 225.6 bits of information respectively.\n",
-       "1   How does the amount of information relate to the degree of surprise or abstract possibility of an event?   The amount of information represents the degree of surprise or the abstract possibility of the event. More unusual events require more information, while common events may not need much information.\n",
-       "2                                       Who is credited with establishing the theory of information in 1948?                                                                                                                                                                                       Claude E. Shannon."
+       "                                                                          question                                                                                                                                        answer\n",
+       "0         How much information do the events have, according to the next sections?   The events have \\(0\\textrm{ bits}\\), \\(2\\textrm{ bits}\\), \\(~5.7\\textrm{ bits}\\), and \\(~225.6\\textrm{ bits}\\) of information respectively.\n",
+       "1   What does information represent in the context of describing an unusual event?                                                                              The degree of surprise or the abstract possibility of the event.\n",
+       "2                    Who published A Mathematical Theory of Communication in 1948?                                                                                                                            Claude E. Shannon."
       ]
      },
      "execution_count": 11,
