move model related op into dedicated model op folder and try to run all local notebook

--- a/example/server_client/server_client.ipynb
+++ b/example/server_client/server_client.ipynb
@@ -18,31 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/joseortiz/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
-   "source": [
-    "from uniflow.transform.client import Client\n",
-    "from uniflow.transform.config import TransformLinearConfig\n",
-    "from uniflow.viz import Viz"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from uniflow.flow_factory import FlowFactory"
+    "from uniflow.flow.client import TransformClient\n",
+    "from uniflow.flow.config import TransformLinearConfig\n",
+    "from uniflow.flow.flow_factory import FlowFactory\n",
+    "from uniflow.viz import Viz"
    ]
   },
   {
@@ -53,7 +36,7 @@
     {
      "data": {
       "text/plain": [
-       "{'extract': [],\n",
+       "{'extract': ['ExtractPDFFlow', 'ExtractTxtFlow'],\n",
        " 'transform': ['TransformHuggingFaceFlow',\n",
        "  'TransformLinearFlow',\n",
        "  'TransformLMQGFlow',\n",
@@ -71,42 +54,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:00<00:00, 38130.04it/s]\n"
+      "100%|██████████| 4/4 [00:00<00:00, 58254.22it/s]\n"
      ]
     }
    ],
    "source": [
-    "client = Client(TransformLinearConfig())\n",
+    "client = TransformClient(TransformLinearConfig())\n",
     "input = [{\"a\": 1, \"b\": 2}, {\"c\": 3, \"d\": 4}, {\"e\": 5, \"f\": 6}, {\"g\": 7, \"h\": 8}]\n",
     "output = client.run(input)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'output': [[{'a': 1, 'b': 2}]],\n",
-       "  'root': <uniflow.node.node.Node at 0x10c896d70>},\n",
+       "  'root': <uniflow.node.node.Node at 0x106bd2e90>},\n",
        " {'output': [[{'c': 3, 'd': 4}]],\n",
-       "  'root': <uniflow.node.node.Node at 0x10c8dc100>},\n",
+       "  'root': <uniflow.node.node.Node at 0x106ac3250>},\n",
        " {'output': [[{'e': 5, 'f': 6}]],\n",
-       "  'root': <uniflow.node.node.Node at 0x10c897d90>},\n",
+       "  'root': <uniflow.node.node.Node at 0x106bd3610>},\n",
        " {'output': [[{'g': 7, 'h': 8}]],\n",
-       "  'root': <uniflow.node.node.Node at 0x10c897e50>}]"
+       "  'root': <uniflow.node.node.Node at 0x106af3a90>}]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +147,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x107b70f10>"
+       "<graphviz.graphs.Digraph at 0x106c2d720>"
       ]
      },
      "metadata": {},
@@ -178,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +208,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x107b705e0>"
+       "<graphviz.graphs.Digraph at 0x106c2f430>"
       ]
      },
      "metadata": {},
