--- a/example/transform/huggingface_model.ipynb
+++ b/example/transform/huggingface_model.ipynb
@@ -129,10 +129,9 @@
     "from dotenv import load_dotenv\n",
     "from IPython.display import display\n",
     "\n",
-    "from uniflow.transform.client import Client\n",
-    "from uniflow.transform.config import TransformHuggingFaceConfig\n",
-    "from uniflow.model.config import HuggingfaceModelConfig\n",
-    "from uniflow.schema import GuidedPrompt, Context\n",
+    "from uniflow.flow.client import TransformClient\n",
+    "from uniflow.flow.config import TransformHuggingFaceConfig, HuggingfaceModelConfig\n",
+    "from uniflow.op.prompt_schema import GuidedPrompt, Context\n",
     "\n",
     "load_dotenv()"
    ]
@@ -296,7 +295,7 @@
     "config = TransformHuggingFaceConfig(\n",
     "    guided_prompt_template=guided_prompt,\n",
     "    model_config=HuggingfaceModelConfig(batch_size=128))\n",
-    "client = Client(config)"
+    "client = TransformClient(config)"
    ]
   },
   {
