--- a/example/transform/lmqg_model.ipynb
+++ b/example/transform/lmqg_model.ipynb
@@ -248,7 +248,7 @@
     "\n",
     "from uniflow.flow.client import TransformClient\n",
     "from uniflow.flow.config import TransformLMQGConfig\n",
-    "from uniflow.op.transform.model_config import LMQGModelConfig\n",
+    "from uniflow.op.model.model_config import LMQGModelConfig\n",
     "from uniflow.viz import Viz\n",
     "from uniflow.op.prompt_schema import Context\n",
     "\n",
