--- a/example/transform/openai_jupyter_notebook_QA.ipynb
+++ b/example/transform/openai_jupyter_notebook_QA.ipynb
@@ -73,10 +73,10 @@
     "from dotenv import load_dotenv\n",
     "from pprint import pprint\n",
     "\n",
-    "from uniflow.transform.client import Client\n",
-    "from uniflow.transform.config import TransformOpenAIConfig\n",
-    "from uniflow.model.config import OpenAIModelConfig\n",
-    "from uniflow.schema import Context, GuidedPrompt\n",
+    "from uniflow.flow.client import TransformClient\n",
+    "from uniflow.flow.config import TransformOpenAIConfig\n",
+    "from uniflow.op.model.model_config import OpenAIModelConfig\n",
+    "from uniflow.op.prompt_schema import Context, GuidedPrompt\n",
     "\n",
     "from langchain.document_loaders import NotebookLoader\n",
     "\n",
@@ -355,7 +355,7 @@
     "    guided_prompt_template=guided_prompt,\n",
     "    model_config=OpenAIModelConfig(response_format={\"type\": \"json_object\"}),\n",
     ")\n",
-    "client = Client(config)"
+    "client = TransformClient(config)"
    ]
   },
   {
