--- a/example/transform/openai_pdf_source_10k_QA.ipynb
+++ b/example/transform/openai_pdf_source_10k_QA.ipynb
@@ -143,7 +143,7 @@
     "import pandas as pd\n",
     "from uniflow.flow.client import TransformClient\n",
     "from uniflow.flow.config import TransformOpenAIConfig\n",
-    "from uniflow.op.transform.model_config import OpenAIModelConfig\n",
+    "from uniflow.op.model.model_config import OpenAIModelConfig\n",
     "from langchain.document_loaders import PyPDFLoader\n",
     "from uniflow.op.prompt_schema import Context, GuidedPrompt\n",
     "\n",
