--- a/example/transform/self_instruct_custom_html_source.ipynb
+++ b/example/transform/self_instruct_custom_html_source.ipynb
@@ -73,11 +73,11 @@
     "import os\n",
     "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
-    "from uniflow.transform.client import Client\n",
-    "from uniflow.transform.config import TransformOpenAIConfig\n",
-    "from uniflow.model.config import OpenAIModelConfig\n",
+    "from uniflow.flow.client import TransformClient\n",
+    "from uniflow.flow.config import TransformOpenAIConfig\n",
+    "from uniflow.op.model.model_config import OpenAIModelConfig\n",
     "from langchain.document_loaders import UnstructuredHTMLLoader\n",
-    "from uniflow.schema import Context, GuidedPrompt\n",
+    "from uniflow.op.prompt_schema import Context, GuidedPrompt\n",
     "\n",
     "load_dotenv()"
    ]
@@ -201,7 +201,7 @@
     "    guided_prompt_template=guided_prompt,\n",
     "    model_config=OpenAIModelConfig(response_format={\"type\": \"json_object\"}),\n",
     ")\n",
-    "client = Client(config)"
+    "client = TransformClient(config)"
    ]
   },
   {
