--- a/example/transform/self_instruct_pdf_source.ipynb
+++ b/example/transform/self_instruct_pdf_source.ipynb
@@ -77,7 +77,7 @@
     "from dotenv import load_dotenv\n",
     "from uniflow.flow.client import TransformClient\n",
     "from uniflow.flow.config import TransformOpenAIConfig\n",
-    "from uniflow.op.transform.model_config import OpenAIModelConfig\n",
+    "from uniflow.op.model.model_config import OpenAIModelConfig\n",
     "from langchain.document_loaders import PyPDFLoader\n",
     "from uniflow.op.prompt_schema import Context, GuidedPrompt\n",
     "from dotenv import load_dotenv\n",
