--- a/example/extract/extract_txt.ipynb
+++ b/example/extract/extract_txt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,40 +19,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/joseortiz/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "{'extract': ['ExtractPDFFlow', 'ExtractTxtFlow'], 'transform': []}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from uniflow.extract.client import Client\n",
-    "from uniflow.extract.config import ExtractTxtConfig\n",
+    "from uniflow.flow.client import ExtractClient\n",
+    "from uniflow.flow.config import ExtractTxtConfig\n",
     "from uniflow.viz import Viz\n",
-    "from uniflow.flow_factory import FlowFactory\n",
+    "from uniflow.flow.flow_factory import FlowFactory\n",
     "\n",
     "FlowFactory.list()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,32 +53,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = Client(ExtractTxtConfig())"
+    "client = ExtractClient(ExtractTxtConfig())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Client running sync [{'filename': './data/test.txt'}]\n",
-      "server running sync [{'filename': './data/test.txt'}]\n",
-      "Running flow <uniflow.extract.flow.extract_txt_flow.ExtractTxtFlow object at 0x10e077760> {'filename': './data/test.txt'}\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 5210.32it/s]"
+      "100%|██████████| 1/1 [00:00<00:00, 9198.04it/s]"
      ]
     },
     {
@@ -115,7 +98,7 @@
       "                       \"the concept of superlinear returns. And if you're \"\n",
       "                       'ambitious you definitely should, because this will be '\n",
       "                       'the wave you surf on.']}],\n",
-      "  'root': <uniflow.node.node.Node object at 0x10e077ee0>}]\n"
+      "  'root': <uniflow.node.node.Node object at 0x117382920>}]\n"
      ]
     },
     {
@@ -133,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +128,7 @@
        " \"You can't understand the world without understanding the concept of superlinear returns. And if you're ambitious you definitely should, because this will be the wave you surf on.\"]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +198,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1083676d0>"
+       "<graphviz.graphs.Digraph at 0x117320250>"
       ]
      },
      "metadata": {},
