--- a/example/pipeline/pipeline_pdf.ipynb
+++ b/example/pipeline/pipeline_pdf.ipynb
@@ -69,11 +69,10 @@
     "import os\n",
     "import pandas as pd\n",
     "from uniflow.pipeline import MultiFlowsPipeline\n",
-    "from uniflow.config import PipelineConfig\n",
-    "from uniflow.transform.config import TransformOpenAIConfig\n",
-    "from uniflow.extract.config import ExtractPDFConfig\n",
-    "from uniflow.model.config import OpenAIModelConfig, NougatModelConfig\n",
-    "from uniflow.schema import GuidedPrompt, Context\n"
+    "from uniflow.flow.config import PipelineConfig\n",
+    "from uniflow.flow.config import TransformOpenAIConfig, ExtractPDFConfig\n",
+    "from uniflow.flow.config import OpenAIModelConfig, NougatModelConfig\n",
+    "from uniflow.op.prompt_schema import GuidedPrompt, Context\n"
    ]
   },
   {
