--- a/example/transform/openai_json_model.ipynb
+++ b/example/transform/openai_json_model.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,24 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/joseortiz/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,12 +60,12 @@
     "from dotenv import load_dotenv\n",
     "from IPython.display import display\n",
     "\n",
-    "from uniflow.transform.client import Client\n",
-    "from uniflow.flow_factory import FlowFactory\n",
-    "from uniflow.transform.config import TransformOpenAIConfig\n",
-    "from uniflow.model.config import OpenAIModelConfig\n",
+    "from uniflow.flow.client import TransformClient\n",
+    "from uniflow.flow.flow_factory import FlowFactory\n",
+    "from uniflow.flow.config import TransformOpenAIConfig\n",
+    "from uniflow.op.model.model_config import OpenAIModelConfig\n",
     "from uniflow.viz import Viz\n",
-    "from uniflow.schema import GuidedPrompt, Context\n",
+    "from uniflow.op.prompt_schema import GuidedPrompt, Context\n",
     "\n",
     "load_dotenv()"
    ]
@@ -87,20 +79,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'extract': [],\n",
+       "{'extract': ['ExtractPDFFlow', 'ExtractTxtFlow'],\n",
        " 'transform': ['TransformHuggingFaceFlow',\n",
        "  'TransformLinearFlow',\n",
        "  'TransformLMQGFlow',\n",
        "  'TransformOpenAIFlow']}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +186,7 @@
     "        response_format={\"type\": \"json_object\"}\n",
     "    ),\n",
     ")\n",
-    "client = Client(config)"
+    "client = TransformClient(config)"
    ]
   },
   {
@@ -206,32 +198,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:01<00:00,  1.31it/s]\n"
+      "100%|██████████| 2/2 [00:03<00:00,  1.51s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "[{'output': [{'response': [{'context': 'It was a sunny day and the sky color is blue.',\n",
-       "      'question': 'What color was the sky?',\n",
+       "      'question': 'What color is the sky?',\n",
        "      'answer': 'blue.'}],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x1160a2500>},\n",
+       "  'root': <uniflow.node.node.Node at 0x118c72bf0>},\n",
        " {'output': [{'response': [{'context': 'My name is bobby and I am a talent software engineer working on AI/ML.',\n",
        "      'question': \"What is Bobby's profession?\",\n",
        "      'answer': 'software engineer working on AI/ML.'}],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x1160a2530>}]"
+       "  'root': <uniflow.node.node.Node at 0x118c72da0>}]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,19 +244,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'response': [{'context': 'It was a sunny day and the sky color is blue.',\n",
-       "   'question': 'What color was the sky?',\n",
+       "   'question': 'What color is the sky?',\n",
        "   'answer': 'blue.'}],\n",
        " 'error': 'No errors.'}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +321,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1103495d0>"
+       "<graphviz.graphs.Digraph at 0x118c72e60>"
       ]
      },
      "metadata": {},
@@ -342,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +381,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x11034a7d0>"
+       "<graphviz.graphs.Digraph at 0x1085e3430>"
       ]
      },
      "metadata": {},
