--- a/example/transform/openai_model.ipynb
+++ b/example/transform/openai_model.ipynb
@@ -44,14 +44,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "True"
@@ -67,7 +59,7 @@
     "from IPython.display import display\n",
     "\n",
     "from uniflow.flow.client import TransformClient\n",
-    "from uniflow.flow import FlowFactory\n",
+    "from uniflow.flow.flow_factory import FlowFactory\n",
     "from uniflow.flow.config import TransformOpenAIConfig\n",
     "from uniflow.viz import Viz\n",
     "from uniflow.op.prompt_schema import Context\n",
@@ -90,7 +82,7 @@
     {
      "data": {
       "text/plain": [
-       "{'extract': [],\n",
+       "{'extract': ['ExtractPDFFlow', 'ExtractTxtFlow'],\n",
        " 'transform': ['TransformHuggingFaceFlow',\n",
        "  'TransformLinearFlow',\n",
        "  'TransformLMQGFlow',\n",
@@ -116,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,21 +161,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/2 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2/2 [00:05<00:00,  2.61s/it]\n"
+      "100%|██████████| 2/2 [00:04<00:00,  2.24s/it]\n"
      ]
     }
    ],
@@ -202,17 +187,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'response': ['question: What color is the sky on a sunny day?\\nanswer: blue.'],\n",
+       "{'response': ['question: What is the color of the sky?\\nanswer: blue.'],\n",
        " 'error': 'No errors.'}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,17 +208,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'response': [\"question: What is Bobby's profession?\\nanswer: software engineer working on AI/ML.\"],\n",
+       "{'response': ['question: What kind of work do you do as a software engineer?\\nanswer: I work on AI/ML technology.'],\n",
        " 'error': 'No errors.'}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
