--- a/example/transform/openai_pdf_source_10k_summary.ipynb
+++ b/example/transform/openai_pdf_source_10k_summary.ipynb
@@ -136,11 +136,11 @@
     "from dotenv import load_dotenv\n",
     "import os\n",
     "import pandas as pd\n",
-    "from uniflow.transform.client import Client\n",
-    "from uniflow.transform.config import TransformOpenAIConfig\n",
-    "from uniflow.model.config import OpenAIModelConfig\n",
+    "from uniflow.flow.client import TransformClient\n",
+    "from uniflow.flow.config import TransformOpenAIConfig\n",
+    "from uniflow.op.model.model_config import OpenAIModelConfig\n",
     "from langchain.document_loaders import PyPDFLoader\n",
-    "from uniflow.schema import Context, GuidedPrompt\n",
+    "from uniflow.op.prompt_schema import Context, GuidedPrompt\n",
     "\n",
     "load_dotenv()\n"
    ]
@@ -291,7 +291,7 @@
     "    guided_prompt_template=guided_prompt,\n",
     "    model_config=OpenAIModelConfig(response_format={\"type\": \"json_object\"}),\n",
     ")\n",
-    "client = Client(config)"
+    "client = TransformClient(config)"
    ]
   },
   {
